[gd_scene load_steps=16 format=3 uid="uid://cyak5axceban7"]

[ext_resource type="FontFile" uid="uid://b1n4844phckae" path="res://assets/kurland.ttf" id="1_ek7ii"]
[ext_resource type="Script" path="res://managment/interface.gd" id="1_w2paa"]
[ext_resource type="Texture2D" uid="uid://bmqcv7k21qtow" path="res://assets/Assets/hpbar-under.png" id="2_t5fyh"]
[ext_resource type="Texture2D" uid="uid://cm4komevldwx4" path="res://assets/Assets/mp-bar-progress.png" id="3_hg4kf"]
[ext_resource type="Texture2D" uid="uid://dwljnmthk2hjr" path="res://assets/Assets/painel.png" id="4_a6hmy"]
[ext_resource type="Texture2D" uid="uid://bvhgvu88c0ef6" path="res://assets/Assets/hp-bar-progress.png" id="4_e4l2f"]
[ext_resource type="Texture2D" uid="uid://kvy12w1i314l" path="res://assets/Assets/pigdey.png" id="5_rycal"]
[ext_resource type="Texture2D" uid="uid://blwlwslag4f8t" path="res://assets/ASEPRITES/Exclamation.png" id="8_3kaxc"]
[ext_resource type="Texture2D" uid="uid://db6dg2ls4ybnd" path="res://assets/Assets/GUI.png" id="9_dxm5m"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="10_srjd4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ksbpw"]
texture = ExtResource("4_a6hmy")

[sub_resource type="LabelSettings" id="LabelSettings_vcv1k"]
font = ExtResource("1_ek7ii")
font_size = 28
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.662745)
shadow_offset = Vector2(3, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmyje"]
size = Vector2(32, 32)

[sub_resource type="CanvasTexture" id="CanvasTexture_bnj1s"]

[sub_resource type="CanvasTexture" id="CanvasTexture_tiwqs"]

[node name="Interface" type="CanvasLayer"]
offset = Vector2(-10, 7)
transform = Transform2D(1, 0, 0, 1, -10, 7)
script = ExtResource("1_w2paa")

[node name="HpBar" type="TextureProgressBar" parent="."]
offset_left = 105.4
offset_top = 5.0
offset_right = 157.4
offset_bottom = 12.0
scale = Vector2(4.2, 3.84)
max_value = 3.0
value = 3.0
texture_under = ExtResource("2_t5fyh")
texture_progress = ExtResource("4_e4l2f")

[node name="MpBar" type="TextureProgressBar" parent="."]
offset_left = 106.0
offset_top = 28.0
offset_right = 158.0
offset_bottom = 35.0
scale = Vector2(3.3, 3.84)
max_value = 5.0
texture_under = ExtResource("2_t5fyh")
texture_progress = ExtResource("3_hg4kf")

[node name="Panel" type="Panel" parent="."]
offset_left = 14.0
offset_top = 5.0
offset_right = 291.0
offset_bottom = 150.0
scale = Vector2(0.85, 0.638)
theme_override_styles/panel = SubResource("StyleBoxTexture_ksbpw")

[node name="Coins" type="Label" parent="."]
offset_left = 137.0
offset_top = 59.0
offset_right = 236.0
offset_bottom = 92.0
text = "000000"
label_settings = SubResource("LabelSettings_vcv1k")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HpValue" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 204.0
offset_top = 12.0
offset_right = -895.0
offset_bottom = -603.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 4
text = "0 / 3"
label_settings = SubResource("LabelSettings_vcv1k")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Pidhead" type="Sprite2D" parent="."]
position = Vector2(60, 56)
rotation = -0.340339
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_rycal")
flip_h = true

[node name="Instinct" type="NinePatchRect" parent="."]
visible = false
offset_left = 44.0
offset_top = 108.0
offset_right = 76.0
offset_bottom = 140.0
texture = ExtResource("4_a6hmy")
region_rect = Rect2(0, 0, 26, 24)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="ExclamationMark" type="Sprite2D" parent="Instinct"]
position = Vector2(16, 16)
scale = Vector2(0.07, 0.0615625)
texture = ExtResource("8_3kaxc")

[node name="baloon" type="NinePatchRect" parent="Instinct"]
visible = false
layout_mode = 0
offset_left = 45.0
offset_top = -6.0
offset_right = 193.0
offset_bottom = 43.0
texture = ExtResource("9_dxm5m")
region_rect = Rect2(49, 97, 30, 31)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 4

[node name="Label" type="Label" parent="Instinct/baloon"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 140.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ek7ii")
text = "Detecto algo oculto
 nas proximidades."

[node name="Area2D" type="Area2D" parent="Instinct"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Instinct/Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_mmyje")

[node name="BallonTimer" type="Timer" parent="Instinct"]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Virtual joystick left" parent="UI" instance=ExtResource("10_srjd4")]
offset_left = -20.0
offset_top = -269.0
offset_right = 280.0
offset_bottom = 31.0
action_left = "left"
action_right = "right"
action_up = "up"
action_down = "down"

[node name="Virtual right" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 862.0
offset_top = 423.0
offset_right = 1162.0
offset_bottom = 723.0
scale = Vector2(0.75, 0.75)

[node name="Jump" type="NinePatchRect" parent="UI/Virtual right"]
layout_mode = 0
offset_left = 138.0
offset_top = 67.0
offset_right = 355.0
offset_bottom = 178.0
texture = ExtResource("9_dxm5m")
region_rect = Rect2(113, 81, 30, 14)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 2

[node name="JumpButton" type="TouchScreenButton" parent="UI/Virtual right/Jump"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-0.666626, -0.333374)
scale = Vector2(217.333, 110.667)
texture_normal = SubResource("CanvasTexture_bnj1s")
action = "jump"

[node name="JumpText" type="Label" parent="UI/Virtual right/Jump"]
layout_mode = 0
offset_left = 2.0
offset_top = 0.666748
offset_right = 211.0
offset_bottom = 107.667
theme_override_fonts/font = ExtResource("1_ek7ii")
theme_override_font_sizes/font_size = 66
text = "Pular"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack" type="NinePatchRect" parent="UI/Virtual right"]
self_modulate = Color(0.611765, 0.12549, 0, 1)
layout_mode = 0
offset_left = -64.0
offset_top = 183.0
offset_right = 121.0
offset_bottom = 267.0
texture = ExtResource("9_dxm5m")
region_rect = Rect2(81, 97, 30, 30)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="AttackText" type="Label" parent="UI/Virtual right/Attack"]
layout_mode = 0
offset_right = 185.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("1_ek7ii")
theme_override_font_sizes/font_size = 48
text = "Atacar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackButton" type="TouchScreenButton" parent="UI/Virtual right/Attack"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-3.05176e-05, 0.999992)
scale = Vector2(185.333, 82.6667)
texture_normal = SubResource("CanvasTexture_tiwqs")
action = "attack"

[connection signal="mouse_entered" from="Instinct/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="timeout" from="Instinct/BallonTimer" to="." method="_on_ballon_timer_timeout"]
